# uilove

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.husky/: pre-commit
apps/backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 7bbafc7d51da_initial_schema.py  c2a2ff438ec6_increase_url_field_lengths.py
apps/backend/app/: database.py  main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: auth.py  categories.py  collections.py  platforms.py  search.py  styles.py  websites.py
apps/backend/app/core/: __init__.py  cache.py  config.py  security.py
apps/backend/app/crud/: __init__.py  base.py  category.py  collection.py  platform.py  style.py  user.py  website.py
apps/backend/app/models/: __init__.py  category.py  collection.py  platform.py  style.py  user.py  website.py
apps/backend/app/schemas/: __init__.py  category.py  collection.py  common.py  platform.py  style.py  user.py  website.py
apps/backend/scripts/: import_data.py
apps/backend/tests/: conftest.py  test_auth.py  test_categories.py  test_collections.py  test_health.py  test_platforms.py  test_search.py  test_styles.py  test_websites.py
apps/frontend/: .dockerignore  .gitignore  CLAUDE.md  (+7 more)
docs/: API.md  TYPES.md  openapi.json
parser/: README.md  categories.json  parse_categories.py  scrape_landing_love.py  websites_complete.csv
(+68 files in other folders)
