[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.6",
    "greenlet>=3.3.1",
    "pandas>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "python-slugify>=8.0.4",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
]

[tool.setuptools.packages.find]
include = ["app*", "tests*"]
exclude = ["data*", "alembic*", "scripts*"]
